--- a/seminars_2015-2016.md
+++ b/seminars_2015-2016.md
@@ -20,7 +20,7 @@ Python in the Geosciences
 | Jan. 5, 2016 | [Charles Maalouf]() | Weather Forecasting and Correction of MOS Using Scikit-Learn |
 | Feb. 2, 2016 | [Johnny Lin](http://www.johnny-lin.com/index.shtml) | Dynamic data structures and first-class citizens: Python \nfeatures that can make modeling more flexible and powerful |
 | Mar. 1, 2016 | No meeting. |
-| Apr. 5, 2016 | [Ben Hudson](http://apl.uw.edu/people/profile.php?last_name=Hudson&first_name=Benjamin) and [Anthony Arendt](http://www.apl.washington.edu/people/profile.php?last_name=Arendt&first_name=Anthony) | Ice Python |
+| Apr. 5, 2016 | [Ben Hudson](http://apl.uw.edu/people/profile.php?last_name=Hudson&first_name=Benjamin) and [Anthony Arendt](http://www.apl.washington.edu/people/profile.php?last_name=Arendt&first_name=Anthony) | [Ice Python](https://github.com/emiliom/UW_Python_for_Geosciences/blob/master/bhudson_aarendt_20160405/README.md) |
 | May, 2016 | | **Landlab? Look it up** |
 | Jun, 2016 | | **Discussion led by Joe; look it up** |
 
