--- a/seminars_2015-2016.md
+++ b/seminars_2015-2016.md
@@ -15,12 +15,12 @@ Python in the Geosciences
 | Date | Speaker | Title |
 | ---- | ---- | ---- |
 | Oct. 6, 2015 | [Joe Hamman](http://joehamman.com/) | Data analysis tools for modern Python: pandas, xray, and beyond |
-| Nov. 3, 2015 | [Emilio Mayorga](http://staff.washington.edu/emiliom/) | [Using conda and IPython notebooks to demo external data access libraries](https://github.com/emiliom/UW_Python_for_Geosciences/tree/master/emayorga_20151103) |
+| Nov. 3, 2015 | [Emilio Mayorga](http://staff.washington.edu/emiliom/) | [Using conda and IPython notebooks to demo external data access libraries](emayorga_20151103) |
 | Dec. 1, 2015 | [Jake VanderPlas](http://www.astro.washington.edu/users/vanderplas/) | An Overview of the Python Scientific Stack |
 | Jan. 5, 2016 | Charles Maalouf | Weather Forecasting and Correction of MOS Using Scikit-Learn |
 | Feb. 2, 2016 | [Johnny Lin](http://www.johnny-lin.com/index.shtml) | Dynamic data structures and first-class citizens: Python \nfeatures that can make modeling more flexible and powerful |
 | Mar. 1, 2016 | No meeting. |
-| Apr. 5, 2016 | [Ben Hudson](http://apl.uw.edu/people/profile.php?last_name=Hudson&first_name=Benjamin) and [Anthony Arendt](http://www.apl.washington.edu/people/profile.php?last_name=Arendt&first_name=Anthony) | [Ice Python](https://github.com/emiliom/UW_Python_for_Geosciences/blob/master/bhudson_aarendt_20160405) |
+| Apr. 5, 2016 | [Ben Hudson](http://apl.uw.edu/people/profile.php?last_name=Hudson&first_name=Benjamin) and [Anthony Arendt](http://www.apl.washington.edu/people/profile.php?last_name=Arendt&first_name=Anthony) | [Ice Python](bhudson_aarendt_20160405) |
 | May, 2016 | | **Discussion led by Joe; look it up** |
 | Jun. 7, 2016 | Sai Nudurupati, UW CEE | Introduction to [Landlab](http://landlab.github.io/#/) |
 
