--- a/seminars_2016-2017.md
+++ b/seminars_2016-2017.md
@@ -1,3 +1,15 @@
+Python in the Geosciences
+====
+**Fall 2016 - Summer 2017 Seminars - University of Washington**
+
+### Time:
+
+1st Tuesday of the month, 4:00PM.
+
+### Location:
+
+6th floor of the Physics Tower, Seminar Room C607 or C610
+
 
 ### Schedule
 
@@ -17,3 +29,8 @@
 | June 6 | Cancelled | No seminar |
 | --- | **Summer 2017** | --- |
 | **Jul. 19 10-11am** *Note special date and time!* | [Parker MacCready](http://faculty.washington.edu/pmacc/index.html), UW Oceanography | General topic: How Python facilitates regional ocean circulation model management |
+
+
+### Other Workshops / Seminars / Resources:
+- [AMS Seventh Symposium on Advances in Modeling and Analysis Using Python, Jan. 23-24, 2017. Seattle.](https://annual.ametsoc.org/2017/index.cfm/programs/conferences-and-symposia/seventh-symposium-on-advances-in-modeling-and-analysis-using-python/)
+- AGU Fall Meeting 2016 Session analogous to last year's Python Solutions for the Earth Sciences (IN041)?
